# wgpu-playground

./: .gitignore  Cargo.toml~  README.md  hello_wgpu.html  index.html
create-wasm-app/: index.html  index.js  package-lock.json  package.json  webpack.config.js
data/: block-replacement.json  blocks.json  config.json  controls.json
derivables/: Cargo.toml  build.rs  output.txt
derivables/src/: block.rs  grid_aligned_subvoxel_vertex.rs  lib.rs  subvoxel_vertex.rs  vertex.rs
derivables/src/dictionaries/: block_type_to_color.rs  block_type_to_texture_coordinates.rs  mod.rs
formats/: Cargo.toml
formats/src/formats/: block_format.rs  color_format.rs  config_format.rs  controls_format.rs  mod.rs  texture_format.rs
fundamentals/: Cargo.toml  build.rs
fundamentals/src/: bitpacking_spec.rs  buffer_size_function.rs  consts.rs  lib.rs  logger.rs  texture_coords.rs  world_position.rs
fundamentals/src/enums/: block_side.rs  block_type.rs  mod.rs
hello-wgpu/: .gitignore  Cargo.toml  index.html  web.sh
hello-wgpu/src/: camera.rs  challenge2.wgsl  data.atl  frustum_compute.wgsl  grid_aligned_subvoxel_shader.wgsl  lib.rs  main.rs  occlusion_cube.wgsl  shader.wgsl  state.rs  subvoxel_shader.wgsl  texture.rs  thread_task_manager.rs
hello-wgpu/src/gpu_data/: mod.rs  vec_vertex_index_length_triple.rs  vertex.rs  vertex_gpu_data.rs
hello-wgpu/src/gpu_manager/: ambient_occlusion_state.rs  camera_state.rs  chunk_index_state.rs  compute_state.rs  compute_state_generated_helper.rs  flag_state.rs  mod.rs  render_state.rs  subvoxel_state.rs  surface_state.rs  texture_state.rs
hello-wgpu/src/gpu_manager/gpu_data/: mod.rs  vec_vertex_index_length_triple.rs  vertex_gpu_data.rs
hello-wgpu/src/gpu_manager/shader_copy/: grid_aligned_subvoxel_shader (copy).wgsl  subvoxel_shader (copy).wgsl
hello-wgpu/src/gpu_manager/shaders/: frustum_compute.wgsl
hello-wgpu/src/gpu_manager/shaders/subvoxels/: grid_aligned_subvoxel_shader.wgsl  subvoxel_shader.wgsl
hello-wgpu/src/gpu_manager/subvoxels/: ambient_occlusion_state.rs  grid_aligned_subvoxel_object.rs  grid_aligned_subvoxel_object_specification.rs  mod.rs  model_manager.rs  subvoxel_gpu_data.rs  subvoxel_object.rs  subvoxel_object_specification.rs  subvoxel_state.rs
hello-wgpu/src/state/: buffer_state.rs  camera_state.rs  compute_state.rs  flag_state.rs  input_manager.rs  input_state.rs  mod.rs  render_state.rs  surface_state.rs  task_manager.rs  texture_state.rs
hello-wgpu/src/tasks/: mod.rs
hello-wgpu/src/tasks/tasks_processors/: generate_chunk_mesh_processor.rs  generate_chunk_processor.rs  mod.rs  update_chunk_padding_processors.rs
hello-wgpu/src/voxels/: block.rs  chunk.rs  cubegen.rs  data  mesh.rs  meshmodified.rs  meshoriginal.rs  meshpotential.rs  mod.rs  position.rs  vertex.rs  world.rs
hello-wgpu/src/voxels/mesh/: cull.rs  face.rs  greedy.rs  mod.rs
string_to_type_dictionaries/: Cargo.toml  build.rs
string_to_type_dictionaries/src/: lib.rs  string_to_block_type.rs  string_to_texture_coords.rs  string_to_texture_indices.rs
