[package]
name = "derivables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.11"
wgpu = "0.13.1"
fundamentals = { path = "../fundamentals" }

[build_dependencies]
phf_codegen = "0.11"
fundamentals = { path = "../fundamentals" }
formats = { path = "../formats" }
serde = { version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
string_to_type_dictionaries = { path = "../string_to_type_dictionaries" }