[package]
name = "derivables"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.11"
wgpu = "22.1.0"
cgmath = "0.18"
fundamentals = { path = "../fundamentals" }
bytemuck = { version = "1.12.1", features = [ "derive" ] }
num = "0.4.0"
num-derive = "0.4.2"
num-traits = "0.2.15"

[build_dependencies]
phf_codegen = "0.11"
fundamentals = { path = "../fundamentals" }
formats = { path = "../formats" }
serde = { version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
string_to_type_dictionaries = { path = "../string_to_type_dictionaries" }