[package]
name = "fundamentals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
phf = "0.11"
phf_shared = "0.11"

[build_dependencies]
phf_codegen = "0.11"
serde = { version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
formats = { path = "../formats" }
num_cpus = "1.3.1"