[package]
name = "fundamentals"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
phf = "0.11"
phf_shared = "0.11"
cgmath = "0.18"
bytemuck = { version = "1.12.1", features = [ "derive" ] }
winit = "0.26"
log = "0.4.17"
log4rs = "1.2.0"

[build_dependencies]
phf_codegen = "0.11"
serde = { version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
formats = { path = "../formats" }
num_cpus = "1.3.1"
image = "0.24.2"

[features]
no_logging = []
log_debug = []
log_info = []
log_warn = []
log_error = []