[package]
name = "hello-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hello-wgpu-bin"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
image = "0.24.2"
anyhow = "1.0.58"
winit = "0.26"
cgmath = "0.18"
wgpu = "0.13.1"
instant = "0.1"
pollster = "0.2"
bytemuck = { version = "1.12.1", features = [ "derive", "min_const_generics" ] }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
phf = { version = "0.11.0", features = ["macros"] }
fastrand = "1.7.0"
itertools = "0.10.3"
fundamentals = { path = "../fundamentals" }
derivables = { path = "../derivables" }
crossbeam = "0.8.1"
noise = "0.7.0"
priority-queue="1.2.3"
fastapprox="0.3.0"
futures-intrusive="0.4.0"
lru = "0.8.0"
bitvec = "1.0.1"
log = "0.4.17"
log4rs = "1.2.0"

[features]
no_logging = ["fundamentals/no_logging"]
log_debug = ["fundamentals/log_debug"]
log_info = ["fundamentals/log_info"]
log_error = ["fundamentals/log_error"]
log_warn = ["fundamentals/log_warn"]