[package]
name = "hello-wgpu"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hello-wgpu-bin"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
image = "0.25.2"
env_logger = "0.11.5"
anyhow = "1.0.58"
winit = { version = "0.30.5" }
cgmath = "0.18"
wgpu = "22.1.0"
web-time = "1.1.0"
pollster = "0.3.0"
bytemuck = { version = "1.12.1", features = [ "derive", "min_const_generics" ] }
num = "0.4.0"
num-derive = "0.4.2"
num-traits = "0.2.15"
phf = { version = "0.11.0", features = ["macros"] }
fastrand = "2.1.0"
itertools = "0.13.0"
fundamentals = { path = "../fundamentals" }
derivables = { path = "../derivables" }
crossbeam = "0.8.1"
noise = "0.9.0"
priority-queue="2.1.0"
fastapprox="0.3.0"
futures-intrusive="0.5.0"
lru = "0.12.4"
bitvec = "1.0.1"
log = "0.4.17"
strum = "0.26.3"
strum_macros = "0.26.4"
thread-id = "4.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = ["Document", "Element", "Window", "console", "HtmlCanvasElement", "HtmlCollection"] }

[build-dependencies]
fundamentals = { path = "../fundamentals" }
derivables = { path = "../derivables" }
regex = "1.10.5"
indexmap = "2.2.6"

[features]
no_logging = ["fundamentals/no_logging"]
log_debug = ["fundamentals/log_debug"]
log_info = ["fundamentals/log_info"]
log_error = ["fundamentals/log_error"]
log_warn = ["fundamentals/log_warn"]