[package]
name = "string_to_type_dictionaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.11"
fundamentals = { path = "../fundamentals" }

[build_dependencies]
phf_codegen = "0.11"
fundamentals = { path = "../fundamentals" }